# teaal-compiler

./: .gitignore  :w  LICENSE  Pipfile  README.md  check.sh  mypy.ini  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yml
docs/: tensor_naming.md  todos.md
es2hfa/: __init__.py  __main__.py  hfa.py  tester.py
es2hfa/hfa/: __init__.py  arg.py  assn.py  base.py  expr.py  op.py  payload.py  stmt.py
es2hfa/ir/: __init__.py  component.py  coord_math.py  display.py  equation.py  flow_graph.py  hardware.py  index_math.py  iter_graph.py  level.py  loop_order.py  mapping.py  metrics.py  nodes.py  partitioning.py  program.py  spacetime.py  tensor.py
es2hfa/parse/: __init__.py  arch.py  bindings.py  display.py  einsum.py  equation.py  format.py  input.py  mapping.py  partitioning.py  tensor.py  utils.py  yaml.py
es2hfa/trans/: __init__.py  canvas.py  collector.py  coord_access.py  equation.py  footer.py  graphics.py  header.py  hfa.py  loop_nest.py  partitioner.py  partitioning.py  translate.py  utils.py
scripts/: check.sh  compile.sh  corr.sh
teaal/: __init__.py  __main__.py
teaal/hfa/: __init__.py  arg.py  assn.py  expr.py  op.py  payload.py  stmt.py
teaal/hifiber/: __init__.py  arg.py  assn.py  base.py  expr.py  op.py  payload.py  stmt.py
teaal/ir/: __init__.py  component.py  coord_math.py  equation.py  flow_graph.py  flow_nodes.py  fusion.py  hardware.py  iter_graph.py  level.py  loop_order.py  metrics.py  node.py  nodes.py  part_nodes.py  partitioning.py  program.py  spacetime.py  tensor.py
tests/: __init__.py  test_foo.py  test_hfa.py
(+202 files in other folders)
